:lipstick: Fix little nitpicky text shift when showing global search loading indicator

--- a/resources/sass/components/global-header.scss
+++ b/resources/sass/components/global-header.scss
@@ -22,6 +22,7 @@
     .search-input {
         @apply .text-sm .w-full;
         padding-left: 5px;
+        padding-right: 20px;
         height: 32px;
         max-width: 400px;
 		&:focus {
@@ -34,6 +35,11 @@
         top: 36px;
         left: -1px; // border offset
         z-index: 999;
+    }
+
+    .global-search-loading-indicator {
+        position: absolute;
+        right: 8px;
     }
 
     .global-search-result-item {
